--- a/ClarifiedModified.css
+++ b/ClarifiedModified.css
@@ -38,6 +38,11 @@
 	text-align: center;
 }
 
+/* List item scales up on hover */
+.list-item:hover {
+  transform:scale(1.01);
+}
+
 /* Edit Footer */
 #footer-block {
     width: 700px!important;
